Inital functionality and Styling
- Added inital functionality, as well as info panel
- Added CSS and styling to components

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Text Prompt AI",
+  "name": "Text Prompt AI",
   "icons": [
     {
       "src": "favicon.ico",
